[workspace]
resolver = "2"
members = [
    "rtm",
    "rtm-mpi",
]

default-members = [
    "rtm",
]

[workspace.package]
version = "2.2.1"
edition = "2021"
authors = ["th"]
license = "MIT"
repository = "https://github.com/th2ch-g/rust-top_message"
description = "rust-top_message: A tool which display message on top"

[workspace.dependencies]
rtm = { path = "rtm/" }
rtm-mpi = { path = "rtm-mpi/" }
clap = { version = "4.5.23", features = ["derive"]  }
chrono = "0.4.22"
rand = "0.8.5"
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", tag = "v0.18.0" }
pollster = "0.3.0"
env_logger = "0.10.1"
log = "0.4.21"
mpi = "0.6.0"
itertools = "0.14.0"

[profile.release]
opt-level = "s"
lto = "fat"
strip = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
