[package]
name = "rtm-lib"
version = "1.1.3"
edition = "2021"
authors = ["th 2023"]
description = "rust-top_message: A tool which display message on top"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"]  }
chrono = "0.4.22"
rand = "0.8.5"

[dev-dependencies]

