[package]
name = "rtm_mpi"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtm-lib = { path = "../rtm-lib/" }
mpi = "0.6.0"

[dev-dependencies]

[profile.release]
lto = true

[profile.dev]
opt-level = 3

