[package]
name = "rtm"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
rand.workspace = true
wgpu.workspace = true
pollster.workspace = true
env_logger.workspace = true
log.workspace = true
itertools.workspace = true

[[bin]]
name = "rtm"
path = "src/main.rs"
